Update test methods